force-app/main/default/objects/ACME_Transaction_History__b/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Transaction Amount of Customer</description>
    <inlineHelpText>Enter Transaction Amount</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>