force-app/main/default/objects/ACME_Transaction_History__b/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <referenceTo>Financial_Accounts__c</referenceTo>
    <relationshipName>Transaction_History</relationshipName>
    <type>Lookup</type>
</CustomField>