force-app/main/default/objects/ACME_Transaction_History__b/fields/MerchantName__c.field-meta.xml
<CustomField>
    <fullName>MerchantName__c</fullName>
    <description>Name of the Merchant</description>
    <inlineHelpText>Name of the Merchant</inlineHelpText>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>