force-app/main/default/objects/ACME_Transaction_History__b/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Unique Identification of Transactions.</description>
    <label>Transaction Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>