force-app/main/default/objects/ACME_Transaction_History__b/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Transaction Type like Credit or Debit</description>
    <inlineHelpText>Transaction Type must be like Credit or Debit only.</inlineHelpText>
    <label>Type</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>